Add User Input to choose grid size nad changed color to randomized color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./srcipt/srcipt.js" defer></script>
 </head>
 <body>
+    <button id="userpopup">Select amount of squares (max 100)</button>
     <div id="container"></div>
 </body>
 </html>
