Change message for clearer UI

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-a-Sketch Odin Project</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <script src="./srcipt/srcipt.js" defer></script>
-</head>
-<body>
-    <button id="userpopup">Select amount of squares (max 100)</button>
-    <div id="container"></div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Etch-a-Sketch Odin Project</title>
+		<link rel="stylesheet" href="./styles/style.css" />
+		<script src="./srcipt/srcipt.js" defer></script>
+	</head>
+	<body>
+		<button id="userpopup">Click to select amount of squares (max 100)</button>
+		<div id="container"></div>
+	</body>
 </html>
